--- a/style.css
+++ b/style.css
@@ -15,20 +15,19 @@ html {
 }
 
 .container {
-  max-width: 1400px;
+  max-width: 98%;
   margin: 0 auto;
 }
 
 .header {
   background-color: #fff;
 
-
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-bottom: 1px solid #fff;
   padding: 5px 15px;
- 
+
   position: fixed;
   top: 0;
   left: 0;
@@ -36,7 +35,6 @@ html {
   z-index: 1000;
   background: white;
   min-height: 50px;
-  
 }
 .nav-links {
   list-style: none;
@@ -124,35 +122,30 @@ html {
 
 .headings-2 p {
   font-size: 13px;
- 
 }
-.grids-2{
+.grids-2 {
   display: grid;
-  grid-template-columns: repeat(4 , 1fr);
+  grid-template-columns: repeat(4, 1fr);
   column-gap: 0.6rem;
   row-gap: 5.8rem;
   grid-template-rows: repeat(2, 1fr);
   grid-template-rows: 70vh 70vh;
   width: 100%;
-  padding: 0 15px;
-
-
+  padding: 0 1.5rem;
 }
-.grid-2 img{
+.grid-2 img {
   object-fit: cover;
   height: 65vh;
   width: 100%;
-
 }
-.dtls-2{
- 
+.dtls-2 {
   display: flex;
   flex-direction: column;
   gap: 0.2rem;
   text-align: center;
   margin-top: 10px;
 }
-.dtls-2 a{
+.dtls-2 a {
   text-decoration: none;
   color: #000000;
   font-size: 12px;
@@ -160,55 +153,51 @@ html {
   text-transform: uppercase;
   letter-spacing: 0.26px;
 }
-.dtls-2 span{
+.dtls-2 span {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.26px;
 }
 
-.btn{
+.btn {
   margin-top: 90px;
   text-align: center;
-  
 }
-.btn button{
+.btn button {
   padding: 15px 30px;
   font-size: 12px;
   background-color: #111111;
   color: #fff;
   border: 1px solid #111111;
   text-transform: uppercase;
- 
+
   font-weight: 400;
   text-align: center;
 }
 
-.hero-3{
+.hero-3 {
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 65vh 70vh;
   gap: 2rem;
   margin-top: 50px;
-  padding: 40px 15px;
-  background-color: #F7F4F4;
-
+  padding: 40px 30px;
+  background-color: #f7f4f4;
 }
-.box1{
+.box1 {
   grid-column: 1/4;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
   gap: 1rem;
-  background-color: #F7A6A6;
- 
+  background-color: #f7a6a6;
 }
-.box1-dtls{
- text-align: center;
- max-width: 62%;
-
+.box1-dtls {
+  text-align: center;
+  max-width: 62%;
 }
-.box1-dtls h3{
+.box1-dtls h3 {
   font-size: 25px;
   margin-bottom: 0.5rem;
   text-transform: uppercase;
@@ -216,13 +205,13 @@ html {
   line-height: 30px;
   color: #fff;
 }
-.box1-dtls p{
+.box1-dtls p {
   font-size: 14px;
   font-weight: 400;
   letter-spacing: 0.26px;
   color: #fff;
 }
-.box1-dtls button{
+.box1-dtls button {
   padding: 10px 15px;
   margin: 20px 0;
   font-size: 12px;
@@ -230,44 +219,43 @@ html {
   color: #fff;
   border: 1px solid #111111;
   text-transform: uppercase;
- 
+
   font-weight: 400;
   text-align: center;
 }
-.box2{
+.box2 {
   grid-column: 4/7;
   background-color: aqua;
 }
-.box3{
+.box3 {
   grid-column: 7/10;
-  background-color:blanchedalmond;
+  background-color: blanchedalmond;
 }
-.box4{
+.box4 {
   grid-column: 10/13;
   background-color: #8c1818;
 }
-.box5{
+.box5 {
   grid-column: 1/5;
   background-color: #111111;
   position: relative;
 }
-.box6{
+.box6 {
   grid-column: 5/9;
   background-color: aqua;
   position: relative;
 }
-.box7{
+.box7 {
   grid-column: 9/13;
   background-color: blanchedalmond;
   position: relative;
 }
-.grid-3 img{
+.grid-3 img {
   object-fit: cover;
   height: 100%;
   width: 100%;
-
 }
-.btn-3{
+.btn-3 {
   position: absolute;
   top: 90%;
   left: 50%;
@@ -279,165 +267,156 @@ html {
   color: #000000;
   border: 1px solid #fff;
   text-transform: uppercase;
- 
+
   font-weight: 600;
   text-align: center;
-
 }
-.hero-4{
-  background-color: #F7F4F4;
-  padding: 0 20px;
+.hero-4 {
+  background-color: #f7f4f4;
+  padding: 0 30px;
 }
-.logos{
+.logos {
   display: flex;
   align-items: center;
   justify-content: space-between;
   margin-top: 40px;
 }
-.hero-5{
+.hero-5 {
   padding: 1rem;
 }
-.hero-5 .headings-2{
+.hero-5 .headings-2 {
   margin-top: 1.5rem;
 }
-.grids-5{
+.grids-5 {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 2rem;
   grid-template-rows: 35vh;
-  
 }
-.grid-5 img{
+.grid-5 img {
   object-fit: cover;
   height: 100%;
   width: 100%;
 }
-.grid-5 .dtls-2 a{
+.grid-5 .dtls-2 a {
   font-size: 16px;
   font-weight: 600;
   color: #444444;
   text-transform: none;
-
 }
-.grid-5 .dtls-2 span{
+.grid-5 .dtls-2 span {
   font-size: 13px;
   font-weight: 400;
   color: #444444;
   text-transform: none;
 }
-.customer{
+.customer {
+  width: 100%;
   display: flex;
   align-items: center;
-  justify-content:flex-start;
+  justify-content: flex-start;
   gap: 10rem;
   margin-top: 100px;
   padding: 2rem 1.5rem;
-  background-color: #F5A4A4;
+  background-color: #f5a4a4;
 }
-.shipping, .money, .support{
+.shipping,
+.money,
+.support {
   display: flex;
   align-items: center;
 
   gap: 1rem;
- 
 }
-.shipping img, .money img, .support img{
+.shipping img,
+.money img,
+.support img {
   height: 50px;
   width: 50px;
- 
 }
-.icon-dtls :first-child{
+.icon-dtls :first-child {
   font-size: 1rem;
   text-transform: uppercase;
   font-weight: 600;
   color: #ffffff;
   letter-spacing: 0.28px;
 }
-.icon-dtls :last-child{
+.icon-dtls :last-child {
   font-size: 14px;
   color: #ffffff;
   letter-spacing: 0.28px;
-  
 }
 
-
 footer {
-
-
-font-family: "karla",sans-serif; /* Change to your preferred font */
-background-color: #FAFAFA;
-background-size: cover; /* Ensures the image covers the entire area */
-background-position: center; /* Centers the image */
-background-repeat: no-repeat; /* Prevents the image from repeating */
+  font-family: "karla", sans-serif; /* Change to your preferred font */
+  background-color: #fafafa;
+  background-size: cover; /* Ensures the image covers the entire area */
+  background-position: center; /* Centers the image */
+  background-repeat: no-repeat; /* Prevents the image from repeating */
 }
 
 /* Container that holds all columns */
 .footer-container {
-max-width: 1400px;
-margin: 0 auto;
-display: grid;
-grid-template-columns: repeat(5, 1fr);
-gap: 20;
-padding:30px 10px 50px 10px;
-
+  max-width: 1400px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  gap: 20;
+  padding: 30px 10px 50px 10px;
 }
 
 /* Individual column styling */
 .footer-column {
-line-height: 1.5;
-max-width: 85%;
-padding: 0 10px; /* Add padding to ensure even spacing */
+  line-height: 1.5;
+  max-width: 85%;
+  padding: 0 10px; /* Add padding to ensure even spacing */
 }
 
 .footer-column p,
 .footer-column ul {
-margin: 0; /* Remove default margin */
-padding: 0; /* Remove default padding */
-font-size: 13px;
-margin: 20px 0;
+  margin: 0; /* Remove default margin */
+  padding: 0; /* Remove default padding */
+  font-size: 13px;
+  margin: 20px 0;
 }
 
 .footer-column li {
-margin-bottom: 5px;
+  margin-bottom: 5px;
 
-list-style: none;
+  list-style: none;
 }
-.links{
+.links {
   display: flex;
   gap: 15px;
 }
-.links li{
+.links li {
   list-style: none;
 }
-.links a{
- 
+.links a {
   text-decoration: none;
-  
 }
 
 .footer-column p.f-head {
-font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-font-size: 14px;
-font-weight: 600;
-text-transform: uppercase;
-
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
 }
 
 .footer-column ul li a {
-
-text-decoration: none;
-font-size: 13px
+  text-decoration: none;
+  font-size: 13px;
 }
 
 .footer-column ul li a:hover {
-text-decoration: underline;
+  text-decoration: underline;
 }
 
 /* Newsletter form */
 .footer-column form {
-margin-top: 10px;
-display: flex;
-flex-direction: column;
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
 }
 .footer-column a {
   color: #000000;
@@ -449,61 +428,60 @@ flex-direction: column;
 }
 
 .footer-column input[type="email"] {
-padding: 15px 18px;
-border: 1px solid #dddddd;
-margin-top: 10px;
-margin-bottom: 10px;
+  padding: 15px 18px;
+  border: 1px solid #dddddd;
+  margin-top: 10px;
+  margin-bottom: 10px;
 
-color: #222222;
+  color: #222222;
 }
 
 .footer-column button {
-padding: 10px 15px;
-background-color: #111111;
-color: #fff;
-text-transform: uppercase;
-border: none;
-font-size: 10px;
+  padding: 10px 15px;
+  background-color: #111111;
+  color: #fff;
+  text-transform: uppercase;
+  border: none;
+  font-size: 10px;
 
-cursor: pointer;
-height: 40px;
-width: 100px;
+  cursor: pointer;
+  height: 40px;
+  width: 100px;
 }
 
 .footer-column button:hover {
-background-color: #444;
+  background-color: #444;
 }
 
 /* Responsive adjustments */
 @media (max-width: 768px) {
-.footer-container {
-  grid-template-columns: 1fr 1fr;
-}
+  .footer-container {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
 @media (max-width: 480px) {
-.footer-container {
-  grid-template-columns: 1fr;
-}
+  .footer-container {
+    grid-template-columns: 1fr;
+  }
 }
 
-.footer-bottom{
+.footer-bottom {
   padding: 30px 20px;
   display: flex;
   align-items: center;
   justify-content: space-between;
   border-top: 1px dotted #eeeeee;
 }
-.footer-bottom p{
+.footer-bottom p {
   font-size: 14px;
   font-weight: 700px;
 }
-.payment-icons{
+.payment-icons {
   display: flex;
   gap: 5px;
 }
 
-p img{
+p img {
   height: 22px;
-
 }
